--- a/para ti.html
+++ b/para ti.html
@@ -239,7 +239,7 @@
             </div>
             
             <div class="destacado">
-                <strong>Eres la mejor novia del mundo </strong>  aunque esté lejos de ti, siento que estás cerca de mí siento ti cariño y tu amor 
+                <strong>Eres la mejor novia del mundo </strong>  aunque esté lejos de ti, siento que estás cerca de mí siento tu cariño y tu amor 
             </div>
             
             <div class="parrafo">
@@ -300,4 +300,5 @@
         });
     </script>
 </body>
+
 </html>
